kubernetes/apps/mario-services/redis/cluster/insight.yaml
# Redis Insight service with name 'redisinsight-service'
apiVersion: v1
kind: Service
metadata:
  name:
    redisinsight-service # name should not be 'redisinsight'
    # since the service creates
    # environment variables that
    # conflicts with redisinsight
    # application's environment
    # variables `RI_APP_HOST` and
    # `RI_APP_PORT`
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5540
  selector:
    app: redisinsight
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight-service
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: "redis-insight.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight-service
                port:
                  number: 80
---
# Redis Insight deployment with name 'redisinsight'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight #deployment name
  labels:
    app: redisinsight #deployment label
spec:
  replicas: 1 #a single replica pod
  selector:
    matchLabels:
      app: redisinsight #which pods is the deployment managing, as defined by the pod template
  template: #pod template
    metadata:
      labels:
        app: redisinsight #label for pod/s
    spec:
      containers:
        - name: redisinsight #Container name (DNS_LABEL, unique)
          image: redis/redisinsight:latest #repo/image
          imagePullPolicy: IfNotPresent #Installs the latest Redis Insight version
          volumeMounts:
            - name: redisinsight #Pod volumes to mount into the container's filesystem. Cannot be updated.
              mountPath: /data
          ports:
            - containerPort: 5540 #exposed container port and protocol
              protocol: TCP
      volumes:
        - name: redisinsight
          emptyDir: {} # node-ephemeral volume https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
